# ForwardPlus

./: .gitignore  .gitmodules  LICENSE  README.md
DirectX11 - seed/: CMakeLists.txt  DevLog.md  readme.md
DirectX11 - seed/src/: Common.h  Main.cpp
DirectX12 - seed/: .gitignore
DirectX12 - seed/src/: Renderer.cpp  Renderer.h  Scene.h
dx11-templatelib-deferred/: CMakeLists.txt  readme.md
dx11-templatelib-deferred/assets/Shaders/: DebugDeferredPS.hlsl  DebugPS.hlsl  DeferredGeometryPS.hlsl  DeferredGeometryVS.hlsl  DeferredGeometry_PS.hlsl  DeferredLightingSimplePS.hlsl  DeferredLightingSimpleVS.hlsl  InstancedPS.hlsl  InstancedVS.hlsl  Lighting.hlsli  SimplePS.hlsl  Structures.hlsli  UnlitPS.hlsl
dx11-templatelib-deferred/assets/Shaders/Deferred/: DebugDeferredPS.hlsl  DeferredGeometryInstancedPS.hlsl  DeferredGeometryInstancedVS.hlsl  DeferredGeometryRegularPS.hlsl  DeferredLighting_LoopLightPS.hlsl  DeferredLighting_SingleLightPS.hlsl  LightVolumeVS.hlsl
dx11-templatelib-deferred/assets/Shaders/Forward/: ForwardLighting_LoopLightPS.hlsl  ForwardLighting_LoopLightPS_Instanced.hlsl  ForwardLighting_SingleLightPS.hlsl  ForwardLighting_SingleLightPS_Instanced.hlsl  InstancedVS.hlsl
dx11-templatelib-deferred/inc/: Common.h  Entity.h  Light.h  Scene.h  SimpleObj.h  Type.h
dx11-templatelib-deferred/src/: ForwardRendering.cpp  Main.cpp  SimpleObj.cpp  SimpleObj_Deferred.cpp  SimpleObj_Forward.cpp
dx11-templatelib-forwardplus/: CMakeLists.txt
dx11-templatelib-forwardplus/assets/Shaders/: Lighting.hlsli  Structures.hlsli  UnlitPS.hlsl  testCS.hlsl
dx11-templatelib-forwardplus/assets/Shaders/Deferred/: DebugDeferredPS.hlsl  DeferredGeometryInstancedPS.hlsl  DeferredGeometryInstancedVS.hlsl  DeferredLighting_LoopLightPS.hlsl
dx11-templatelib-forwardplus/assets/Shaders/Forward/: ForwardLighting_LoopLightPS.hlsl  InstancedVS.hlsl  RegularVS.hlsl
dx11-templatelib-forwardplus/assets/Shaders/ForwardPlus/: Common.hlsli  ComputeFrustum.hlsl  CullLight.hlsl
dx11-templatelib-forwardplus/inc/: ForwardRendering.h  Model.h  RenderTechnique.h  Scene.h  Shader.h  SimpleObj.h  Type.h
dx11-templatelib-forwardplus/src/: Main.cpp  SimpleObj.cpp  SimpleObj_Deferred.cpp  SimpleObj_Forward.cpp  SimpleObj_ForwardPlus.cpp
dx11-templatelib-simpleobj/: .gitignore  CMakeLists.txt
dx11-templatelib-simpleobj/assets/Shaders/: SimpleVS.hlsl  Structures.hlsli
dx11-templatelib-simpleobj/src/: Main.cpp  Model.cpp
legacy/dx11-template/: .gitignore  readme.md
legacy/dx11-template-simpleobj/: CMakeLists.txt  readme.md
legacy/dx11-template-simpleobj/assets/Shaders/: ConstrantBuffers.hlsli
legacy/dx11-template-simpleobj/src/: Common.h  Entity.h  Material.h  Model.cpp
legacy/dx11-template/src/: Common.h  Main.cpp
legacy/dx12-template/: readme.md
legacy/dx12-template/src/: Scene.cpp
seed/src/: Common.h  Renderer.cpp  Renderer.h
simpleobj/: .gitignore  CMakeLists.txt
simpleobj - TemplateLib/: .gitignore  CMakeLists.txt  readme.md
simpleobj - TemplateLib/DirectXTemplateLib/inc/: Game.h
simpleobj - TemplateLib/DirectXTemplateLib/src/: Application.cpp
simpleobj - TemplateLib/assets/Shaders/: InstancedPS.hlsl  InstancedVS.hlsl  SimplePS.hlsl
simpleobj - TemplateLib/inc/: Material.h  SimpleObj.h
simpleobj - TemplateLib/src/: Common.h  Entity.h  Light.h  Material.h  Model.h  Scene.h  Shader.h  SimpleObj.cpp  SimpleObj.h
simpleobj/assets/: simplePixelShader.hlsl  simpleVertexShader.hlsl
simpleobj/assets/Shaders/: SimplePS.hlsl  SimpleVS.hlsl
simpleobj/src/: Camera.h  Common.h  Entity.h  Light.h  Main.cpp  Material.h  Model.h
template/: CMakeLists.txt  readme.md
template/assets/: simplePixelShader.hlsl  simpleVertexShader.hlsl
template/src/: Camera.h  Common.h  Main.cpp
